--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -3,40 +3,42 @@
   <title>Rekisteröi Koira</title>
 </head>
 <body>
-    <h1>Rekisteröi uusi koira</h1>
-        <form action="/create_register_dog" method="POST">
-            <label for="dogname">Koiran nimi:</label>
-                <input type="text" id="dogname" name="dogname" required maxlength="50"><br><br>
+<h1>Rekisteröi uusi koira</h1>
+    <form action="/create_register_dog" method="POST">
+<input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
 
-            <label for="breed">Rotu:</label>
-                <input type="text" id="breed" name="breed" required maxlength="50"><br><br>
+    <label for="dogname">Koiran nimi:</label>
+    <input type="text" id="dogname" name="dogname" required maxlength="50"><br><br>
 
-            <label for="age">Ikä:</label>
-                <input type="number" id="age" name="age" min="0" max="35" required><br><br>
+    <label for="breed">Rotu:</label>
+    <input type="text" id="breed" name="breed" required maxlength="50"><br><br>
 
-            <label for="gender">Sukupuoli:</label>
-                <select id="gender" name="gender" required>
-                    <option value="uros">Uros</option>
-                    <option value="narttu">Narttu</option>
-                </select><br><br>
+    <label for="age">Ikä:</label>
+    <input type="number" id="age" name="age" min="0" max="35" required><br><br>
 
-            <label for="size">Koko:</label>
+    <label for="gender">Sukupuoli:</label>
+    <select id="gender" name="gender" required>
+        <option value="uros">Uros</option>
+        <option value="narttu">Narttu</option>
+    </select><br><br>
+
+        <label for="size">Koko:</label>
             <select id="size" name="size" required>
-                <option value="">(valitse)</option>
+            <option value="">(valitse)</option>
                 {% for size in sizes %}
                     <option value="{{ size }}">{{ size }}</option>
                 {% endfor %}
             </select><br><br>
 
-            <label for="temperament">Luonteenpiirre:</label>
+        <label for="temperament">Luonteenpiirre:</label>
             <select id="temperament" name="temperament" required>
                 <option value="">(valitse)</option>
                 {% for temperament in temperaments %}
                     <option value="{{ temperament }}">{{ temperament }}</option>
-                {% endfor %}
+                    {% endfor %}
             </select><br><br>
 
-            <label for="activity">Aktiviteetti:</label>
+        <label for="activity">Aktiviteetti:</label>
             <select id="activity" name="activity" required>
                 <option value="">(valitse)</option>
                 {% for activity in activities %}
@@ -44,10 +46,10 @@
                 {% endfor %}
             </select><br><br>
 
-            <input type="submit" value="Rekisteröi koira">
-        </form>
+    <input type="submit" value="Rekisteröi koira">
+    </form>
         <form action="/" method="get">
-            <button type="submit">Takaisin etusivulle</button>
+    <button type="submit">Takaisin etusivulle</button>
         </form>
 </body>
 </html>
