--- a/templates/register_dog.html
+++ b/templates/register_dog.html
@@ -43,6 +43,7 @@
                     <option value="{{ activity }}">{{ activity }}</option>
                 {% endfor %}
             </select><br><br>
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     <input type="submit" value="Rekisteröi koira">
     </form>
 <form action="/" method="GET">
