--- a/templates/remove_dog.html
+++ b/templates/remove_dog.html
@@ -4,6 +4,7 @@
     <h1>Poista koira</h1>
         <p>Oletko varma, että haluat poistaa koiran: {{ dog.dogname }}?</p>
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
         <input type="submit" value="Poista koira">
     </form>
 <form method="GET" action="{{ url_for('get_dog', dog_id=dog.dog_id) }}">
